Rebase fix
Signed-off-by: Daniel Kec <daniel.kec@oracle.com>