@@ -253,112 +253,6 @@
         </dependency>
     </dependencies>
 
-    <profiles>
-        <!-- invoke unit tests against JDK like this:
-         mvn clean test -DtestInJdk -Djdk.to.test=$jdk/home/path/bin/java
-         -->
-        <profile>
-            <id>jdk</id>
-            <activation>
-                <property>
-                    <name>testInJdk</name>
-                </property>
-            </activation>
-            <properties>
-                <argLine>${proxyOpts} -Djdk.build=true</argLine>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- some random non-existing directory to make sure the built classes are not found, instead the ones from jdk are used -->
-                            <classesDirectory>jerreAbfAFgfreu</classesDirectory>
-                            <excludes>
-                                <!-- tests using RI specific API -->
-                                <exclude>**/MimeUtilityTest.java</exclude>
-                            </excludes>
-                            <classpathDependencyScopeExcludes>compile</classpathDependencyScopeExcludes>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExclude>jakarta.xml.soap:jakarta.xml.soap-api</classpathDependencyExclude>
-                                <classpathDependencyExclude>org.jvnet.mimepull:mimepull</classpathDependencyExclude>
-                            </classpathDependencyExcludes>
-                            <jvm>${jdk.to.test}</jvm>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk-sm</id>
-            <activation>
-                <property>
-                    <name>testInJdkWithSM</name>
-                </property>
-            </activation>
-            <properties>
-                <argLine>${proxyOpts} -Djdk.build=true -Djava.security.manager -Djava.security.policy=./src/test/resources/test.policy</argLine>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- some random non-existing directory to make sure the built classes are not found, instead the ones from jdk are used -->
-                            <classesDirectory>jerreAbfAFgfreu</classesDirectory>
-                            <excludes>
-                                <!-- tests using RI specific API -->
-                                <exclude>**/MimeUtilityTest.java</exclude>
-                            </excludes>
-                            <classpathDependencyScopeExcludes>compile</classpathDependencyScopeExcludes>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExclude>jakarta.xml.soap:jakarta.xml.soap-api</classpathDependencyExclude>
-                                <classpathDependencyExclude>org.jvnet.mimepull:mimepull</classpathDependencyExclude>
-                            </classpathDependencyExcludes>
-                            <jvm>${jdk.to.test}</jvm>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>coverage</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.jacoco</groupId>
-                            <artifactId>jacoco-maven-plugin</artifactId>
-                            <version>0.8.4</version>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-prepare-agent</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>default-report</id>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <modules>
         <module>saaj-ri</module>
         <module>saaj-samples</module>
